k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: host-go-frontend
  namespace: host-go
spec:
  selector:
    app: host-go-frontend
  ports:
    - protocol: TCP
      port: 80            # Puerto dentro del clúster
      targetPort: 80      # Puerto en el contenedor
